--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   <form id="form">
     <input type="number" min="1" max="99" size="1" maxlength="2" id="choice">
     <input id="start" type="submit" value="GO">
-    <input id="reset" type="button" value="Stop">
+    <input id="reset" type="button" value="Reset">
   </form>
 
   <div id="countdownDisplay"></div>
 
 
-  <script src="./index.js"></script>
+  <script src="./secondtry.js"></script>
 </body>
 
 </html>
